[FIX] web_enterprise: list view optional columns icon position
Before this commit, the column customization icon sometimes covers the
last column header in list views (or the 'ordering carret' icon).

Steps to reproduce:
- open Survey in list view
=> Avg Score column header overlaps with the icon

This commit adapts the headers last column's padding to avoid overlapping.

task-2816987

closes odoo/enterprise#30165

X-original-commit: c84618f86cfd1f4ceb97d35778d9c5574f78044c
Related: odoo/odoo#97562

--- a/web_enterprise/static/src/legacy/scss/list_view.scss
+++ b/web_enterprise/static/src/legacy/scss/list_view.scss
@@ -15,7 +15,8 @@
 @mixin o-list-view-full-width-padding($base-x: $table-cell-padding-x, $base-y: $table-cell-padding-y, $ratio: 1) {
     $body-padding: floor((($base-y * $ratio * 0.7) / 1rem) * $o-root-font-size); // FIXME
 
-    > thead > tr > :not(:empty) {
+    > thead > tr > :not(:empty),
+    .o_optional_columns_dropdown_toggle {
         padding: ceil((($base-y * $ratio) / 1rem) * $o-root-font-size + 4px) 4px; // FIXME
     }
     > tbody > tr:not(.o_list_table_grouped) > td {
@@ -68,7 +69,8 @@
 
     // ------- Increase thead and tfoot vertical padding -------
     > thead, > tfoot {
-        > tr > * {
+        > tr > *,
+        + .o_optional_columns_dropdown_toggle {
             // List views always have the table-sm class, maybe we should
             // remove it (and consider it does not exist) and change the default
             // table paddings
@@ -173,10 +175,6 @@
         @include media-breakpoint-up(xl) {
             @include o-list-view-full-width-padding($base-x: $table-cell-padding-x-sm, $base-y: $table-cell-padding-y-sm, $ratio: 2.5);
         }
-    }
-
-    .o_optional_columns_dropdown_toggle {
-        padding: 8px 10px;
     }
 }
 // Restore on mobile the scroll on list view
